style.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --clr-neutral: 0 0% 100%;
  --clr-bg: 212 45% 89%;
  --clr-text: 220 15% 55%;
  --clr-heading: 218 44% 22%;
  --clr-dark: 0, 0%, 0%;

  --ff-outfit: 'Outfit', sans-serif;
  --fz-text: 15px;
}

html,
body {
  height: 100%;
}

body {
  font-family: var(--ff-outfit);
  font-size: var(--fz-text);
  background-color: hsl(var(--clr-bg));
  color: hsl(var(--clr-text));
  padding: 1.75rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

h1 {
  color: hsl(var(--clr-heading));
}

img {
  width: 100%;
}

main {
  width: 20rem;
  padding: 1rem;
  background-color: hsl(var(--clr-neutral));
  border-radius: 1rem;
  box-shadow: 0 1rem 1rem hsla(var(--clr-dark), 0.1);
}

.card-header {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 1rem;
  overflow: hidden;
}

.content {
  margin: 1.5rem 1rem;
  text-align: center;
}

.content h1 {
  font-size: 1.375rem;
  margin-bottom: 1rem;
}

.attribution {
  font-size: 11px;
  text-align: center;
  position: absolute;
  bottom: 1rem;
  text-wrap: balance;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

